adding multi.dst target for multiple curve generation, comparison with experiment

--- a/scripts/eos/eos.cfg
+++ b/scripts/eos/eos.cfg
@@ -65,3 +65,12 @@ HeIsoT {
     Out R:P:E
 }
 
+MultiCurve {
+    Curve Multi
+    BaseCurve HeHugTest
+    ParFile run/results/HeIsoT.dat
+    NameColumn 1
+    Subst1 StartE:3
+    Subst2 StartR:2
+}
+
