fixing deploy, adding d2 matter

--- a/scripts/gasd/gasd.cfg
+++ b/scripts/gasd/gasd.cfg
@@ -522,3 +522,14 @@ Pbgsi_abu {
     ( Mat Sapphir L 4.97 PntE -5 )
     EndTime 1500
 }       
+
+
+
+d2 {                          
+    ( Mat Steel L 1.7 U 5.1 N 150  )
+    ( Mat D2 P 118 T 287 L 3.311 PntT -5 -50 5 )
+    ( Mat Sapphir L 5 PntE -5 )
+    EndTime 1450
+}       
+
+
