spline generation update

--- a/scripts/eos/eos.cfg
+++ b/scripts/eos/eos.cfg
@@ -74,3 +74,8 @@ MultiCurve {
     Subst2 StartR:2
 }
 
+BrasIsoT {
+    Curve P_RT_Caloric Mat BrasSpl
+    R 1e-1:30:256:2 T 1000:10000:2:256
+    Out R:P
+}
