adding brass mg matters to gasd clc

--- a/matters/MATERIAL.CFG
+++ b/matters/MATERIAL.CFG
@@ -62,7 +62,9 @@
  Steel-347     47  Denc   7.89   A     4.529   B    1.475  Grun  2
  Steel-Tern    47  Denc   7.89   A     4.553   B    1.482  Grun  1.69
  Steel-Morg    47  Denc   7.89   A     4.553   B    1.482  Grun  2.17
+ Brass         48  Denc   8.48   A     3.73    B    1.43   Grun  2
 
+ 
  Tmp           49  Denc   0.001  A     2       B    3       Grun 2
  H2_Nelis      50  Denc   0.089  A     2.0759  B    1.2444  Grun 5.61
  H2            50  Denc   0.071  A     2.0759  B    1.2444  Grun 2
