--- a/scripts/gasd/gasd.cfg
+++ b/scripts/gasd/gasd.cfg
@@ -533,3 +533,89 @@ d2 {
 }       
 
 
+#    ( Mat Mg L 7 U 13.836 )
+H2_127 {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.0476 E 0.3  L 4.45 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_128 {
+    ( Mat Mg L 7 U 14.63 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.0518 E 0.3  L 6.357 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1600
+}
+H2_129 {
+    ( Mat Mg L 7 U 14.06 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.05 E 0.3  L 2.4 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_128a {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.0518 E 0.3  L 6.357 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1600
+}
+H2_129a {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.05 E 0.3  L 2.4 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_135 {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat BrasSpl L 2 )
+    ( Mat H2dismet  R 0.0265 E 0.3  L 6.513 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_135a {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.0265 E 0.3  L 6.513 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_135b {
+    ( Mat Mg L 7 U 14.7 )
+    ( Mat BrasSpl L 2 )
+    ( Mat H2dismet  R 0.0265 E 0.3  L 6.513 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_135c {
+    ( Mat Mg L 7 U 16 )
+    ( Mat BrasSpl L 2 )
+    ( Mat H2dismet  R 0.0265 E 0.3  L 6.513 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_mod {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.01 E 0.3  L 2.4 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
+
+H2_mod_02 {
+    ( Mat Mg L 7 U 15.35 )
+    ( Mat Brass L 2 )
+    ( Mat H2dismet  R 0.02 E 0.3  L 2.4 N 200 PntT -5 5 100 )
+    ( Mat Sapphir L 5.02 PntE -5 )
+     EndTime 1400
+}
