--- a/scripts/eos/usefull/eos.cfg
+++ b/scripts/eos/usefull/eos.cfg
@@ -86,3 +86,87 @@ D2IsoT {
     Out R:P
 }
 
+D2Mol_RosMod {
+    Curve GEN_FREE_SPL Mat D2Mol_RosMod
+    R 3e-5:5:400:1:1 T 10:1000000:400:1:1
+    GenParams LogX:1:LogY:1:LogZ:1:AddBeforeLogX:0:AddBeforeLogY:0:AddBeforeLogZ:0.188:MulX:1:MulY:1:MulZ:1:GenerationMisfit:1e-4
+    GenR 305 GenT 305
+    ClcPoints 0
+}
+
+DMet_RosMod {
+    Curve GEN_FREE_SPL Mat DMet_RosMod
+    R 3e-5:5:400:1:1 T 10:1000000:400:1:1
+    GenParams LogX:1:LogY:1:LogZ:1:AddBeforeLogX:0:AddBeforeLogY:0:AddBeforeLogZ:2.133:MulX:1:MulY:1:MulZ:1:GenerationMisfit:1e-4
+    GenR 305 GenT 305
+    ClcPoints 0
+}
+
+Test_D2Mol_Ros {
+    Curve TEST_FREE_SPL Mat D2Mol_RosMod MatSpl D2Mol_RosMod.spl
+    R 3e-5:5:55:1:1 T 10:1000000:55:1:1
+    Error 1e-3
+}
+
+Test_DMet_Ros {
+    Curve TEST_FREE_SPL Mat DMet_RosMod MatSpl DMet_RosMod.spl
+    R 3e-5:5:55:1:1 T 10:1000000:55:1:1
+    Error 1e-3
+}
+
+
+D2_Mol_Atom_Dis {
+    Curve GEN_FREE_SPL Mat D2_Mol_Atom_Dis
+    R 3.1e-5:4.9:400:1:1 T 10:1000000:400:1:1
+    GenParams LogX:1:LogY:1:LogZ:1:AddBeforeLogX:0:AddBeforeLogY:0:AddBeforeLogZ:299.7:MulX:1:MulY:1:MulZ:-1:GenerationMisfit:3e-4
+    GenR 350 GenT 350
+    ClcPoints 1
+}
+
+D2LowIsoT {
+    Curve P_RT Mat D2Low
+    R 2e-4:2e-1:31:1:1 T 50:100:6:0:31
+    Out T:R:P
+}
+
+D2DissT {
+    Curve P_RT Mat D2_Mol_Atom_Dis
+    R 5e-5:1e-2:31:1:1 T 5000:5000:1:0:31
+    Out T:R:P:EOS.Mol_M
+}
+
+D2DissTOld {
+    Curve P_RT Mat D2_Mol_Atom_Dis_Old
+    R 5e-5:1e-2:31:1:1 T 5000:5000:1:0:31
+    Out T:R:P:EOS.Mol_M
+}
+
+H2DissIdeal {
+    Curve P_RT Mat H2_Mol_Atom_Ideal_Dis
+    R 1e-6:1e0:310:1:1 T 5000:5000:1:0:310
+    Out R:EOS.Mol_M:EOS.Atom_M
+    
+}
+D2DissIdeal {
+    Curve P_RT Mat D2_Mol_Atom_Ideal_Dis
+    R 1e-4:1e0:310:1:1 T 5000:5000:1:0:310
+    Out R:EOS.Mol_M
+    
+}
+H2Ideal {
+    Curve P_RT Mat H2Ideal
+    R 1e-6:1e0:310:1:1 T 5000:5000:1:0:310
+    Out T:R:P:EOS.FreeE
+    
+}
+HIdeal {
+    Curve P_RT Mat HIdeal
+    R 1e-6:1e0:310:1:1 T 5000:5000:1:0:310
+    Out T:R:P:EOS.FreeE
+    
+}
+D2Bnd {
+    Curve BUILD_BND MatHgh D2_Mol_Atom_Dis.spl MatLow DMet_Ros_Ideal_Electron_Patch_Sum Error 1e-6
+    R 1e-1:4.8:500:1:1 T 1500:15000:1:0:500 P 1:1000:500:1:1
+    
+}
